--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "Robin",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^8.2.0"
+  },
   "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
