--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Robin",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0"
   },
   "devDependencies": {
